maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:10: error: '=' expected but '(' found.
def trouverBiscuit():Array[Int](2) = {
                               ^ShortestPathMaze:16: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^