maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  val L:Int=getMondeLargeur()
  val H:Int=getMondeHauteur()
  val xBis = trouverBiscuit()(0)
  val yBis = trouverBiscuit()(1)
    // Your code here
}

def trouverBiscuit():Array[Int](2) = {
  return (1,2)
}